[package]
name = "nostr-scrolls"
description = "NIP-C5 scrolls SDK"
readme = "../README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
keywords.workspace = true

[dependencies]
spin = { version = "0.10.0", default-features = false, features = ["rwlock"] }
nostr-scrolls-macros = { workspace = true }
heapless = { version = "0.9.1", features = ["portable-atomic"] }

[[example]]
name = "simple"
