[package]
name = "nostr-scrolls"
description = "NIP-5C scrolls SDK"
readme = "../README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
keywords.workspace = true

[dependencies]
nostr-scrolls-macros = { workspace = true }
heapless = { version = "0.9.1", features = ["portable-atomic"] }

[features]
debug-strings = []

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]
all-features = true

[[example]]
name = "simple"

[[example]]
name = "resonate"

[[example]]
name = "attr_from"

[[example]]
name = "positive_number"

[[example]]
name = "echoes"
